force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/MPM4_BASE__Total_Hours_Estimate__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Total_Hours_Estimate__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Calculated from hours estimates on all child milestones</inlineHelpText>
    <label>Total Hours Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>