force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/MPM4_BASE__Total_Open_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Total_Open_Task_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>How many open tasks are there in this project? (Calculated. Includes Late and Blocked tasks.)</inlineHelpText>
    <label>Total Open Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>