force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/MPM4_BASE__Total_Uncompleted_Expenses__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Total_Uncompleted_Expenses__c</fullName>
    <formula>IF( AND(MPM4_BASE__Total_Expense_Incurred__c &gt;= 0, MPM4_BASE__Total_Completed_Expenses__c &gt;= 0 ), MPM4_BASE__Total_Expense_Incurred__c - MPM4_BASE__Total_Completed_Expenses__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Uncompleted Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>