force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/MPM4_BASE__Weighted_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Weighted_Percent_Complete__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The percent complete when factoring in the different values populated in the &apos;Percent of Entire Project&apos; field for all Project Tasks.</description>
    <label>Weighted Percent Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>