force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Offshore_Escalation_Point__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Escalation_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offshore Escalation Point</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Offshore Delivery Lead-Escalation Point)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>