force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Overall_Project_Summary__c.field-meta.xml
<CustomField>
    <fullName>Overall_Project_Summary__c</fullName>
    <label>Overall Project Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>