force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>IF(LEFT(OwnerId, 3) = &apos;005&apos;, ( Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName),  Owner:Queue.QueueName )</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>