force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/PassThrough_Billings__c.field-meta.xml
<CustomField>
    <fullName>PassThrough_Billings__c</fullName>
    <label>Pass-Through Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>