force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Complete__c</fullName>
    <description>This field is computed as Total Earned Hours/Total Estimated Task Hours</description>
    <formula>Total_Earned_Hrs__c / Total_Project_Hrs__c</formula>
    <inlineHelpText>This field is computed as Total Earned Hours/Total Estimated Task Hours</inlineHelpText>
    <label>Percentage Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>