force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Project_Classification__c.field-meta.xml
<CustomField>
    <fullName>Project_Classification__c</fullName>
    <label>Project Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MuleSoft Integration</fullName>
            </value>
            <value>
                <fullName>MuleSoft Automation</fullName>
            </value>
            <value>
                <fullName>MuleSoft IDP</fullName>
            </value>
            <value>
                <fullName>MuleSoft EDI</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Field Service Cloud</fullName>
            </value>
            <value>
                <fullName>Analytics Cloud</fullName>
            </value>
            <value>
                <fullName>Financial Services Cloud</fullName>
            </value>
            <value>
                <fullName>Health Cloud</fullName>
            </value>
            <value>
                <fullName>Manufacturing Cloud</fullName>
            </value>
            <value>
                <fullName>Consumer Goods Cloud</fullName>
            </value>
            <value>
                <fullName>Education Cloud</fullName>
            </value>
            <value>
                <fullName>Nonprofit Cloud</fullName>
            </value>
            <value>
                <fullName>Government Cloud</fullName>
            </value>
            <value>
                <fullName>Tableau CRM</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Quip</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
                <isActive>false</isActive>
                <label>Managed Services</label>
            </value>
            <value>
                <fullName>Regular Projects</fullName>
                <isActive>false</isActive>
                <label>Regular Projects</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>