force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Project_Folder_Directory__c.field-meta.xml
<CustomField>
    <fullName>Project_Folder_Directory__c</fullName>
    <label>Project Folder Directory</label>
    <type>Url</type>
</CustomField>