force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Project_Hours_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Project_Hours_Invoices__c</fullName>
    <description>Total of hours from Resource Timelines which have invoiced.</description>
    <inlineHelpText>Total of hours from Resource Timelines which have invoiced.</inlineHelpText>
    <label>PD Project Hours Invoices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>