force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Project_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Project_Requirements__c</fullName>
    <label>Project Requirements</label>
    <type>Url</type>
</CustomField>