force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>