force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Salesforce_AE__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce AE</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Salesforce AE)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>