force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/SoW_Gap_Analysis__c.field-meta.xml
<CustomField>
    <fullName>SoW_Gap_Analysis__c</fullName>
    <label>SoW Gap Analysis</label>
    <type>Url</type>
</CustomField>