force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Status_Report__c.field-meta.xml
<CustomField>
    <fullName>Status_Report__c</fullName>
    <description>Biweekly Status report of Project.</description>
    <inlineHelpText>Biweekly Status report of Project. To be uploaded every Friday.</inlineHelpText>
    <label>Latest Status Report</label>
    <type>Url</type>
</CustomField>