force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Status_Report_Required__c.field-meta.xml
<CustomField>
    <fullName>Status_Report_Required__c</fullName>
    <label>Status Report Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>