force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Subsequent_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Discount_Percentage__c</fullName>
    <inlineHelpText>When Advance Payment feature is used, this field determines how much discount is to be applied for each subsequent invoice. Example Advance of 20% and apply 10% discount to future invoice. the left over is applied to the last and final invoice</inlineHelpText>
    <label>Subsequent Discount Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>