force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Allocated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated_Hours__c</fullName>
    <description>The Sum of Allocated Hours assigned to a Project
RM - Duplicate field. Created rollup field for same purpose.</description>
    <inlineHelpText>The Sum of Allocated Hours assigned to a Project</inlineHelpText>
    <label>PD Total Allocated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>