force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Allocation_Deficit_Buffer_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocation_Deficit_Buffer_Hrs__c</fullName>
    <description>This is computed as Total Allocated Hrs Remaining Minus Effort Hrs Remaining 
– Negative number implies a Deficit or Shortage, 
--Positive number implies a buffer</description>
    <formula>if ( Effort_Remaining1__c &gt;  Total_Allocation_Hrs_Remaining__c ,-Effort_Remaining1__c +  Total_Allocation_Hrs_Remaining__c, Total_Allocation_Hrs_Remaining__c- Effort_Remaining1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is computed as Total Allocated Hrs Remaining Minus Effort Hrs Remaining 
– Negative number implies a Deficit or Shortage, 
--Positive number implies a buffer</inlineHelpText>
    <label>Total Allocation Deficit/Buffer (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>