force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Allocation_Hrs_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocation_Hrs_Remaining__c</fullName>
    <description>Total Allocated hours Remaining</description>
    <formula>Total_Allocated_Hrs__c -  Total_Consumed_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Allocated hours Remaining = Total Allocated hrs - Total Hrs Consumed</inlineHelpText>
    <label>Total Allocation Hrs Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>