force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Invoiced__c</fullName>
    <description>Total of costs from Resource Timelines which have invoiced.</description>
    <inlineHelpText>Total of costs from Resource Timelines which have invoiced.</inlineHelpText>
    <label>PD Total Amount Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>