force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Bookings_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Bookings_Budget__c</fullName>
    <inlineHelpText>Budget from Total Bookings. Updated by Roll up helper (read only for end users)</inlineHelpText>
    <label>PD Total Bookings Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>