force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget__c</fullName>
    <description>Sum of Closed Won Opportunity Amount Linked to Project</description>
    <label>Total Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>