force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Budget_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Allocated__c</fullName>
    <description>This field populates the Total Allocated cost for each Project
RM - Duplicate field. Created rollup field for same purpose.</description>
    <inlineHelpText>This field populates the Total Allocated cost for each Project</inlineHelpText>
    <label>PD Total Budget Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>