force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Budget_Allocated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Allocated_Cost__c</fullName>
    <description>Sum of  Total Planned Cost from Project Allocation.</description>
    <inlineHelpText>Sum of  Total Planned Cost from Project Allocation.</inlineHelpText>
    <label>Total Budget Allocated ($)</label>
    <summarizedField>FPSA_Project_Allocation__c.FPSA_Projected_Revenue__c</summarizedField>
    <summaryForeignKey>FPSA_Project_Allocation__c.FPSA_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>