force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Budget_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Consumed__c</fullName>
    <description>The Total Cost of a Project after Time is Submitted Or Approved against it.
Note: This is the Actual Cost not Planned.
RM - Duplicate field. Created rollup field for same purpose.</description>
    <inlineHelpText>The Total Cost of a Project after Time is Submitted Or Approved against it.
Note: This is the Actual Cost not Planned.</inlineHelpText>
    <label>PD Total Budget Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>