force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Budget_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Remaining__c</fullName>
    <description>The Total Project Budget Revenue Remaining - Based On allocations, what is remaining</description>
    <formula>Total_Project_Budget_revenue__c  -  Total_Budget_Consumed_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Project Budget Revenue Remaining - Based On allocations, what is remaining</inlineHelpText>
    <label>Total Budget Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>