force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Consumed_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Consumed_Hrs__c</fullName>
    <description>Sum of Total Time Submitted from Project Allocation.</description>
    <inlineHelpText>Sum of Total Time Submitted from Project Allocation.</inlineHelpText>
    <label>Total Consumed Hours</label>
    <summarizedField>FPSA_Project_Allocation__c.Total_Time_Submitted__c</summarizedField>
    <summaryForeignKey>FPSA_Project_Allocation__c.FPSA_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>