force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Contracted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Contracted_Hours__c</fullName>
    <description>Formula Total Contracted Hours = Total contract value divided by hourly rate</description>
    <formula>Total_Budget__c  /  Average_Hourly_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PD Total Contracted Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>