force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Earned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Earned_Hours__c</fullName>
    <description>Sum of Hours for completed Tasks
RM - Duplicate field. Created rollup field for same purpose.</description>
    <inlineHelpText>Sum of Hours for completed Tasks</inlineHelpText>
    <label>PD Total Earned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>