force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Earned_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Earned_Hrs__c</fullName>
    <description>Sum of total earned hours from Project Allocation.</description>
    <inlineHelpText>Sum of total earned hours from Project Allocation.</inlineHelpText>
    <label>Total Earned Hours</label>
    <summarizedField>FPSA_Project_Allocation__c.Total_Earned_Value__c</summarizedField>
    <summaryForeignKey>FPSA_Project_Allocation__c.FPSA_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>