force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Estimated_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Hrs__c</fullName>
    <description>Total Number of estimated hours from Task and Issues for all resources at project level.</description>
    <formula>Total_Task_Estimated_Hrs__c + Total_Issue_Estimated_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Number of estimated hours from Task and Issues for all resources at project level.</inlineHelpText>
    <label>Total Estimated Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>