force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Hours_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Consumed__c</fullName>
    <description>Sum of Time submitted
RM - Duplicate field. Created rollup field for same purpose.</description>
    <inlineHelpText>Sum of Time submitted</inlineHelpText>
    <label>PD Total Hours Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>