force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Invoice_Amount_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount_After_Discount__c</fullName>
    <label>Total Invoice Amount (After Discount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>