force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced_Amount__c</fullName>
    <description>Total of costs from Resource Timelines which have invoiced.</description>
    <inlineHelpText>Total of costs from Resource Timelines which have invoiced.</inlineHelpText>
    <label>PD Total Invoiced Amount</label>
    <summarizedField>FPSA_Project_Allocation__c.Total_Invoiced_Amount__c</summarizedField>
    <summaryForeignKey>FPSA_Project_Allocation__c.FPSA_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>