force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Invoiced_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced_Due_Amount__c</fullName>
    <description>Summarizing Total Amount Due from related Invoice Headers</description>
    <inlineHelpText>Summarizing Total Amount Due from related Invoice Headers</inlineHelpText>
    <label>Total Invoiced Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>