force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_InvoicedAmount__c.field-meta.xml
<CustomField>
    <fullName>Total_InvoicedAmount__c</fullName>
    <description>Total invoiced amount summarizing from Invoice Headers.</description>
    <inlineHelpText>Total invoiced amount summarizing from Invoice Headers.</inlineHelpText>
    <label>Total Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>