force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_InvoicedHours__c.field-meta.xml
<CustomField>
    <fullName>Total_InvoicedHours__c</fullName>
    <description>Summarizing total invoiced hours from Invoiced Hours.</description>
    <inlineHelpText>Summarizing total invoiced hours from Invoiced Hours.</inlineHelpText>
    <label>Total Invoiced Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>