force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Issue_Estimated_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Issue_Estimated_Hrs__c</fullName>
    <description>Sum of Issue Assigned Hours from Project Allocation.</description>
    <inlineHelpText>Sum of Issue Assigned Hours from Project Allocation.</inlineHelpText>
    <label>Total Issue Estimated Hours</label>
    <summarizedField>FPSA_Project_Allocation__c.Issue_Assigned_Hours__c</summarizedField>
    <summaryForeignKey>FPSA_Project_Allocation__c.FPSA_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>