force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Project_Budget_revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Budget_revenue__c</fullName>
    <description>This field populates the Sum of Closed Won Opportunity Amounts Linked to Project - If there are no Opportunities associated with a Project then it populates the Total Budget Allocated for a Project</description>
    <formula>IF(Total_Budget__c = 0, Total_Budget_Allocated_Cost__c
, Total_Budget__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field populates the Sum of Closed Won Opportunity Amounts Linked to Project - If there are no Opportunities associated with a Project then it populates the Total Budget Allocated for a Project</inlineHelpText>
    <label>Total Project Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>