force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Project_Hours_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Hours_2__c</fullName>
    <formula>IF(FPSA_Is_Billable__c = True  &amp;&amp; Total_Estimated_Task_Hours__c = 0, Total_Allocated_Hours__c, Total_Estimated_Task_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PD Total Project Hours 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>