force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Project_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Hours__c</fullName>
    <label>PD Total Project Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>