force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Project_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Hrs__c</fullName>
    <formula>Total_Project_Budget_revenue__c / Average_Hourly_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Project Hours Computed based on Total Budget/Average Hourly Rate</inlineHelpText>
    <label>Total Project Hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>