force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Task_Estimated_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Task_Estimated_Hrs__c</fullName>
    <description>Total of Task estimated hours from Project Allocation.</description>
    <inlineHelpText>Total of Task estimated hours from Project Allocation.</inlineHelpText>
    <label>Total Task Estimated Hours</label>
    <summarizedField>FPSA_Project_Allocation__c.Task_Assigned_Hours__c</summarizedField>
    <summaryForeignKey>FPSA_Project_Allocation__c.FPSA_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>