force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Unallocated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Unallocated_Budget__c</fullName>
    <formula>Total_Project_Budget_revenue__c  -  Total_Budget_Allocated_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field tell the PM how much budget has not be allocated. Please note, every week the batch job trues up the unused hours for each resource. Example resource was allocated 40 hrs but billed either 24 and 2 days of PTO or 56 hrs with overtime. As a result the previous weeks allocated hours get reset to actual time used by the resource. Based on usage the allocation can be either under allocated or over allocated. Helps PM know if they are leaving money on the table or not</inlineHelpText>
    <label>Total Unallocated Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>