force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Total_Unallocated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Unallocated_Hours__c</fullName>
    <formula>Total_Project_Hrs__c -  Total_Allocated_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Allocated hours is difference between total Project hrs - Total Allocated Hours</inlineHelpText>
    <label>Total Unallocated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>