force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Track_of_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>Track_of_Status_Report__c</fullName>
    <inlineHelpText>This will change to updated when the new report is added on Friday if not it will be in Due.</inlineHelpText>
    <label>Track of Status Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>